--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
             <tbody>
                 <tr>
                     <td>Elementary</td>
-                    <td>Quezon Central School</td>
+                    <td><a href="https://web.facebook.com/qcs103571">Quezon Central School</a></td>
                     <td> Elementary</td>
                     <td> 2009-2014</td>
                 </tr>
 
                 <tr>
                     <td> Secondary</td>
-                    <td>Quezon National High School</td>
+                    <td><a href="https://web.facebook.com/300568QuezonNHS">Quezon National High School</a></td>
                     <td> Secondary</td>
                     <td> 2014-2021</td>
                 </tr>
 
                 <tr>
                     <td> college</td>
-                    <td>Isabela State University-Roxas</td>
+                    <td><a href="https://isu.edu.ph/">Isabela State University-Roxas</a></td>
                     <td> BSIT</td>
                     <td> 2021-</td>
                 </tr>
@@ -116,11 +116,10 @@
                 <td>⭐⭐⭐⭐⭐ </td>
             </tr>
         </table>
-
         <br>
-        <a href="hobby.html">hobby</a> | <a href="Contact Me.html">Contact</a>
 
-
+        <button type="button" class="btn btn-outline-primary"><a href="hobby.html">hobby</a></button>
+        <button type="button" class="btn btn-outline-primary"><a href="Contact Me.html">Contact</a></button>
 </body>
 
 </html>
